{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 68,
  "lineage": "5235d8ce-a03b-1f51-6ef4-bbe8831c7b22",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:security-group/sg-0ce31c41c83c71bee",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ce31c41c83c71bee",
            "ingress": [],
            "name": "Nodeapp-cluster-2024061314463682850000000c",
            "name_prefix": "Nodeapp-cluster-",
            "owner_id": "471112595535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "Nodeapp",
              "Name": "Nodeapp-cluster"
            },
            "tags_all": {
              "Example": "Nodeapp",
              "Name": "Nodeapp-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:security-group/sg-01f19dea8ffaf93b2",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-01f19dea8ffaf93b2",
            "ingress": [],
            "name": "Nodeapp-node-2024061314463540940000000a",
            "name_prefix": "Nodeapp-node-",
            "owner_id": "471112595535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "Nodeapp",
              "Name": "Nodeapp-node",
              "kubernetes.io/cluster/Nodeapp": "owned"
            },
            "tags_all": {
              "Example": "Nodeapp",
              "Name": "Nodeapp-node",
              "kubernetes.io/cluster/Nodeapp": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-991698445",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ce31c41c83c71bee",
            "security_group_rule_id": "sgr-0e915c69326670304",
            "self": false,
            "source_security_group_id": "sg-01f19dea8ffaf93b2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-932987067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-090e9a21c07345510",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2130667238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-0a389ea64b06e6373",
            "self": false,
            "source_security_group_id": "sg-0ce31c41c83c71bee",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1637526610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-0cd8b5601564452e8",
            "self": false,
            "source_security_group_id": "sg-0ce31c41c83c71bee",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1462187064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-0456e2daffb3eb22f",
            "self": false,
            "source_security_group_id": "sg-0ce31c41c83c71bee",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1148913689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-0bb70f36c3dd9ffea",
            "self": false,
            "source_security_group_id": "sg-0ce31c41c83c71bee",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-551173074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-067ff11a178f5b1b5",
            "self": false,
            "source_security_group_id": "sg-0ce31c41c83c71bee",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-568599721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-0a0be80a084088632",
            "self": false,
            "source_security_group_id": "sg-0ce31c41c83c71bee",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1546052995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-04f4727570c3a5383",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1744617465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-0ffddb84067badaf9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1012720616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-01f19dea8ffaf93b2",
            "security_group_rule_id": "sgr-09591cad67af8d95b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:network-acl/acl-039007c00758d3e9b",
            "default_network_acl_id": "acl-039007c00758d3e9b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039007c00758d3e9b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "471112595535",
            "subnet_ids": [
              "subnet-00108e6724e83c715",
              "subnet-00a06e8219820b661",
              "subnet-02cf85e4028ff934f",
              "subnet-0a6a7cef7fcdc8c8b",
              "subnet-0afb0685e7be41771",
              "subnet-0fed0094a49ab83ca"
            ],
            "tags": {
              "Name": "Nodeapp-default"
            },
            "tags_all": {
              "Name": "Nodeapp-default"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:route-table/rtb-0ddc4effa32869f79",
            "default_route_table_id": "rtb-0ddc4effa32869f79",
            "id": "rtb-0ddc4effa32869f79",
            "owner_id": "471112595535",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Nodeapp-default"
            },
            "tags_all": {
              "Name": "Nodeapp-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:security-group/sg-0a02a1ed779e5d745",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a02a1ed779e5d745",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "471112595535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nodeapp-default"
            },
            "tags_all": {
              "Name": "Nodeapp-default"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f4af7399faec56e",
            "arn": "arn:aws:ec2:eu-north-1:471112595535:elastic-ip/eipalloc-09f4af7399faec56e",
            "domain": "vpc",
            "id": "eipalloc-09f4af7399faec56e",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-48-176-144.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.176.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nodeapp-eu-north-1a"
            },
            "tags_all": {
              "Name": "Nodeapp-eu-north-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0271fa3a894935ab9",
            "arn": "arn:aws:ec2:eu-north-1:471112595535:elastic-ip/eipalloc-0271fa3a894935ab9",
            "domain": "vpc",
            "id": "eipalloc-0271fa3a894935ab9",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-170-89-68.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.89.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nodeapp-eu-north-1b"
            },
            "tags_all": {
              "Name": "Nodeapp-eu-north-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:internet-gateway/igw-0f1aaeebe02bf3a48",
            "id": "igw-0f1aaeebe02bf3a48",
            "owner_id": "471112595535",
            "tags": {
              "Name": "Nodeapp"
            },
            "tags_all": {
              "Name": "Nodeapp"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f4af7399faec56e",
            "association_id": "eipassoc-0767eca5b09b40be3",
            "connectivity_type": "public",
            "id": "nat-0f6d1a55557e0ad7f",
            "network_interface_id": "eni-0084c77514d13f359",
            "private_ip": "10.123.1.57",
            "public_ip": "13.48.176.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a06e8219820b661",
            "tags": {
              "Name": "Nodeapp-eu-north-1a"
            },
            "tags_all": {
              "Name": "Nodeapp-eu-north-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0271fa3a894935ab9",
            "association_id": "eipassoc-0b17050429e786998",
            "connectivity_type": "public",
            "id": "nat-0bc7d99814ffae830",
            "network_interface_id": "eni-08eefb88445f3eeb5",
            "private_ip": "10.123.2.38",
            "public_ip": "16.170.89.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fed0094a49ab83ca",
            "tags": {
              "Name": "Nodeapp-eu-north-1b"
            },
            "tags_all": {
              "Name": "Nodeapp-eu-north-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d876f52d3e0930f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f6d1a55557e0ad7f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d876f52d3e0930f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01eb9136bbd62c0f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bc7d99814ffae830",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01eb9136bbd62c0f8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f1aaeebe02bf3a48",
            "id": "r-rtb-0897f8204b8b8b5391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0897f8204b8b8b539",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:route-table/rtb-0748ad7297ef240a6",
            "id": "rtb-0748ad7297ef240a6",
            "owner_id": "471112595535",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Nodeapp-intra"
            },
            "tags_all": {
              "Name": "Nodeapp-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:route-table/rtb-08d876f52d3e0930f",
            "id": "rtb-08d876f52d3e0930f",
            "owner_id": "471112595535",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Nodeapp-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "Nodeapp-private-eu-north-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:route-table/rtb-01eb9136bbd62c0f8",
            "id": "rtb-01eb9136bbd62c0f8",
            "owner_id": "471112595535",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Nodeapp-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "Nodeapp-private-eu-north-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:route-table/rtb-0897f8204b8b8b539",
            "id": "rtb-0897f8204b8b8b539",
            "owner_id": "471112595535",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Nodeapp-public"
            },
            "tags_all": {
              "Name": "Nodeapp-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6a6c59cd4d3dad1",
            "route_table_id": "rtb-0748ad7297ef240a6",
            "subnet_id": "subnet-0a6a7cef7fcdc8c8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053e43d8efcd4b6e0",
            "route_table_id": "rtb-0748ad7297ef240a6",
            "subnet_id": "subnet-00108e6724e83c715"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d29c4716b779141",
            "route_table_id": "rtb-08d876f52d3e0930f",
            "subnet_id": "subnet-0afb0685e7be41771"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064c4cbed24d574e9",
            "route_table_id": "rtb-01eb9136bbd62c0f8",
            "subnet_id": "subnet-02cf85e4028ff934f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a771f7b896cd66a",
            "route_table_id": "rtb-0897f8204b8b8b539",
            "subnet_id": "subnet-00a06e8219820b661"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a18264b7b5230e6",
            "route_table_id": "rtb-0897f8204b8b8b539",
            "subnet_id": "subnet-0fed0094a49ab83ca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:subnet/subnet-0a6a7cef7fcdc8c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.123.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6a7cef7fcdc8c8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112595535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodeapp-intra-eu-north-1a"
            },
            "tags_all": {
              "Name": "Nodeapp-intra-eu-north-1a"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:subnet/subnet-00108e6724e83c715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.123.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00108e6724e83c715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112595535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodeapp-intra-eu-north-1b"
            },
            "tags_all": {
              "Name": "Nodeapp-intra-eu-north-1b"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:subnet/subnet-0afb0685e7be41771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afb0685e7be41771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112595535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodeapp-private-eu-north-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Nodeapp-private-eu-north-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:subnet/subnet-02cf85e4028ff934f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cf85e4028ff934f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112595535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodeapp-private-eu-north-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Nodeapp-private-eu-north-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:subnet/subnet-00a06e8219820b661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a06e8219820b661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112595535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodeapp-public-eu-north-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Nodeapp-public-eu-north-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:subnet/subnet-0fed0094a49ab83ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fed0094a49ab83ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112595535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodeapp-public-eu-north-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Nodeapp-public-eu-north-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04bb8b8d34dac4ff7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:471112595535:vpc/vpc-04bb8b8d34dac4ff7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-039007c00758d3e9b",
            "default_route_table_id": "rtb-0ddc4effa32869f79",
            "default_security_group_id": "sg-0a02a1ed779e5d745",
            "dhcp_options_id": "dopt-05f07378a9e5a3402",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04bb8b8d34dac4ff7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ddc4effa32869f79",
            "owner_id": "471112595535",
            "tags": {
              "Name": "Nodeapp"
            },
            "tags_all": {
              "Name": "Nodeapp"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}